corrected & somewhat tidy